--- a/.github/ISSUE_TEMPLATE/base_package_update.yml
+++ b/.github/ISSUE_TEMPLATE/base_package_update.yml
@@ -1,10 +1,18 @@
 name: 🌟 Update a Base Package
 description: Update an existing Base Package that has been previously submitted.
-title: "Update an existing Base Package"
+title: "Update Base Package <replace_by_package_name>"
 labels: [base-package-update]
 assignees:
   - gilbertsoft
 body:
+  - type: checkboxes
+    id: coc
+    attributes:
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow the [TYPO3 Code of Conduct](https://typo3.org/coc).
+      options:
+        - label: I agree to follow the TYPO3 Code of Conduct
+          required: true
   - type: input
     id: package-name
     attributes:
